fix spacing in helper text

--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/form/content-types-form.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/form/content-types-form.component.scss
@@ -20,3 +20,9 @@
 .content-type__form {
     width: 522px;
 }
+
+.field {
+    .p-field-hint {
+        margin-top: -$spacing-3;
+    }
+}
